More Java sample dashboards